Fix align items when 5V5

--- a/vainlab/static/vainlab/style.css
+++ b/vainlab/static/vainlab/style.css
@@ -177,6 +177,7 @@ span#player-name {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     min-width: 300px;
 
     background: #fff;
